# src/server/server.dto.ts
@@ -1,11 +1,8 @@
 export class CreateServerDto {
     constructor(
         public port: string,
-        public regionName: string,
-        public uuid: string,
+        public gridname: string,
         public coordinates: string,
-        public ip: string,
-        public gridName: string,
         public dataBaseHost: string,
         public dataBaseName: string,
         public dataBaseUser: string,
